[package]
name = "uclcli"
version = "0.1.0"
authors = ["Kjell Braden <kjell.braden@bmw.de>"]
edition = "2018"
description = "command line compressor/decompressor using libucl / NRV"
repository = "https://github.com/afflux/uclcli/"
license = "GPL-3.0-or-later"
links = "ucl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
libc = "0.2"
memmap = "0.7.0"
anyhow = "1.0"
thiserror = "1.0"
